Bug 298742 - Esc does not clear the selection any more in Dolphin 2.0
Summary: Esc does not clear the selection any more in Dolphin 2.0
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: view-engine: general (other bugs)
Version First Reported In: 16.12.2
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Peter Penz
URL:
Keywords:
: 300735 (view as bug list)
Depends on:
Blocks:
 
Reported: 2012-04-24 13:01 UTC by Frank Reininghaus
Modified: 2012-05-31 09:02 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.8.3
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Frank Reininghaus 2012-04-24 13:01:46 UTC
When I started using Dolphin 2.0 at work, I noticed that Esc does not clear the selection any more. Clearing the selection was useful for me in the following use case:

1. Press Esc to clear the selection.
2. Press the context menu key to open the context menu for the current directory (the one I get by right-clicking the empty space of the view), e.g., to create a new file.

This cannot be done any more easily without using the mouse.

I'll post a patch to ReviewBoard in a minute.

Reproducible: Always
Comment 1 Frank Reininghaus 2012-04-25 07:09:33 UTC
Git commit d3b1312d3edc615b03fb17c1a5fa62ccb61cdabd by Frank Reininghaus.
Committed on 25/04/2012 at 08:51.
Pushed by freininghaus into branch 'KDE/4.8'.

When Esc is pressed, clear the selection and cancel the keyboard search

This patch restores the Dolphin 1.x behaviour that Esc clears the
selection (Dolphin 2.0 did not have an easy way to clear the selection
using the keyboard so far). Moreover, Esc now also cancels the current
keyboard search. This fixes the problem that the only way to cancel the
search is to wait until the timeout has expired.
Related: bug 297458
FIXED-IN: 4.8.3

M  +7    -0    dolphin/src/kitemviews/kitemlistcontroller.cpp
M  +4    -2    dolphin/src/kitemviews/kitemlistkeyboardsearchmanager.cpp
M  +2    -0    dolphin/src/kitemviews/kitemlistkeyboardsearchmanager_p.h

http://commits.kde.org/kde-baseapps/d3b1312d3edc615b03fb17c1a5fa62ccb61cdabd
Comment 2 Frank Reininghaus 2012-04-25 07:22:11 UTC
Git commit dc6667b72a5d7a987e61e4d85b8ddfb64f461489 by Frank Reininghaus.
Committed on 25/04/2012 at 09:17.
Pushed by freininghaus into branch 'master'.

When Esc is pressed, clear the selection and cancel the keyboard search

This patch restores the Dolphin 1.x behaviour that Esc clears the
selection (Dolphin 2.0 did not have an easy way to clear the selection
using the keyboard so far). Moreover, Esc now also cancels the current
keyboard search. This fixes the problem that the only way to cancel the
search is to wait until the timeout has expired.
Related: bug 297458
(cherry picked from commit d3b1312d3edc615b03fb17c1a5fa62ccb61cdabd)

M  +7    -0    dolphin/src/kitemviews/kitemlistcontroller.cpp
M  +4    -2    dolphin/src/kitemviews/private/kitemlistkeyboardsearchmanager.cpp
M  +2    -0    dolphin/src/kitemviews/private/kitemlistkeyboardsearchmanager.h

http://commits.kde.org/kde-baseapps/dc6667b72a5d7a987e61e4d85b8ddfb64f461489
Comment 3 Peter Penz 2012-05-31 09:02:23 UTC
*** Bug 300735 has been marked as a duplicate of this bug. ***