When Esc is pressed, clear the selection and cancel the keyboard search

This patch restores the Dolphin 1.x behaviour that Esc clears the
selection (Dolphin 2.0 did not have an easy way to clear the selection
using the keyboard so far). Moreover, Esc now also cancels the current
keyboard search. This fixes the problem that the only way to cancel the
search is to wait until the timeout has expired.

BUG: 298742
CCBUG: 297458
FIXED-IN: 4.8.3